Add profiles for Java versions 16-23
Signed-off-by: Krzysztof Skrzypczynski <krzysztof.skrzypczynski@chainguard.dev>